<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carPicture"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:contentDescription="@string/imageDescription">

    <Button
        android:id="@+id/button2"
        android:layout_width="179dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="84dp"
        android:text="@string/rejectRide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="185dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="84dp"
        android:text="@string/acceptRide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="411dp"
        android:layout_height="354dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/teal_200" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="394dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="182dp"
                android:layout_height="30dp"
                android:text="@string/travel"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/distanceToTravel"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="193dp"
                android:layout_height="30dp"
                android:text="@string/carChose"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/requestCar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/driveTotal"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/totalCost"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="TextView" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>