<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="252dp"
        android:layout_height="70dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="84dp"
        android:text="@string/generateEstimate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carSpinner" />

    <EditText
        android:id="@+id/travelDistance"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/distanceInput"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/carSpinner"
        android:layout_width="208dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="96dp"
        android:entries="@array/carList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelDistance" />

    <Spinner
        android:id="@+id/distMeasurement"
        android:layout_width="122dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:entries="@array/measurement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>